--- a/tutorial-viewer.html
+++ b/tutorial-viewer.html
@@ -6,7 +6,7 @@
   <h1>Meteor tutorial viewer</h1>
 
   {{#each stepIndices}}
-    {{#basicTabs tabs=tabs}}
+    {{#dynamicTabs tabs=tabs activeTab=activeTab}}
       {{#tabContent slug="blaze"}}
         {{> Template.dynamic template=getContentBlaze}}
       {{/tabContent}}
@@ -19,6 +19,6 @@
         {{> Template.dynamic template=getContentReact}}
       {{/tabContent}}
 
-    {{/basicTabs}}
+    {{/dynamicTabs}}
   {{/each}}
 </body>
