--- a/tutorial-viewer.html
+++ b/tutorial-viewer.html
@@ -5,6 +5,7 @@
 <body>
   <h1>Meteor tutorial viewer</h1>
 
+  Step: 
   {{#each stepIndices}}
     <button class="go-to-step {{stepActiveClass}}">
       {{stepNumber}}
